package com.smarthire.domain.enums;

public enum ApplicationStatus {
    NEW,
    IN_REVIEW,
    ASSESSMENT,
    INTERVIEW,
    OFFER,
    HIRED,
    REJECTED,
    WITHDRAWN;
}
