@startuml
title PIPE — Transition Candidate Stage\nLayered target application-design viewpoint
top to bottom direction

skinparam dpi 300
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam packageStyle rectangle
skinparam classAttributeIconSize 12
skinparam linetype ortho
skinparam ArrowColor #334155
skinparam ArrowThickness 1
skinparam ClassBorderColor #64748B
skinparam ClassBorderThickness 1
skinparam ClassBackgroundColor #F8FAFC
skinparam InterfaceBackgroundColor #F3E8FF
skinparam PackageBorderColor #475569
skinparam PackageBorderThickness 1
skinparam DefaultFontColor #111827
skinparam ClassFontColor #111827
skinparam ClassAttributeFontColor #111827
skinparam NoteBackgroundColor #FFF7ED
skinparam NoteBorderColor #FDBA74

package "Routing & Boundary" #EFF6FF {
  class PipelineMoveRoute <<REST API, conceptual>> {
    +GET /api/v1/jobs/{jobId}/pipeline
    +POST /api/v1/applications/{id}/move
  }
}

package "Controller Layer" #EFF6FF {
  class WorkflowController <<Controller, conceptual>> {
    -workflowService: WorkflowService
    +getPipeline(jobId: Long): ApiResponse<PipelineBoardResponse>
    +move(id: Long, request: MoveApplicationRequest): ApiResponse<ApplicationCardResponse>
  }
}

package "Service Layer" #F0FDF4 {
  class WorkflowService <<Service>> {
    -applicationRepository: ApplicationRepository
    -emailProducer: EmailNotificationProducer
    -tenantContext: TenantContext
    +getPipeline(jobId: Long): PipelineBoardResponse
    +move(actorId: Long, applicationId: Long, request: MoveApplicationRequest): ApplicationCardResponse
    +canMove(from: RecruitmentStage, to: RecruitmentStage, status: ApplicationStatus): boolean
  }
}

package "DTO Layer" #FFF7ED {
  class MoveApplicationRequest <<Request, conceptual>> {
    +toStageId: Long
    +expectedUpdatedAt: Instant
    +note: String [0..1]
  }
  class PipelineBoardResponse <<Response, conceptual>> {
    +jobId: Long
    +columns: StageColumn[*]
  }
}

package "Repository Layer" #F5F3FF {
  interface ApplicationRepository <<Repository>> {
    +findById(id: Long): Optional<Application>
    +save(application: Application): Application
  }
}

package "Domain Entity Layer" #F0FDF4 {
  entity Application <<Entity>> {
    -id: Long
    -stageId: Long [0..1]
    -status: ApplicationStatus
    -updatedAt: Instant
  }
  entity RecruitmentStage <<Entity>> {
    -id: Long
    -code: String [0..1]
    -name: String
    -terminal: boolean
  }
  entity ApplicationStatusHistory <<Entity>> {
    -id: Long
    -fromStageId: Long [0..1]
    -toStageId: Long
    -enteredAt: Instant
    -exitedAt: Instant [0..1]
    -durationSeconds: Long [0..1]
  }
  enum ApplicationStatus <<enumeration>> {
    NEW
    IN_REVIEW
    ASSESSMENT
    INTERVIEW
    OFFER
    HIRED
    REJECTED
    WITHDRAWN
  }
}

package "Infrastructure & Persistence" #FEFCE8 {
  interface EmailNotificationProducer <<Messaging Port, conceptual>> {
    +publishStageChanged(tenantId: String, applicationId: Long, toCode: String): void
  }
  class "RabbitMQ notify.email" as NotifyBroker <<Message Broker>> {
    +notify.email.q
  }
  class "Dedicated Tenant MySQL DB" as TenantDB <<Database>> {
    +applications
    +recruitment_stages
    +application_status_history
  }
  class TenantContext <<ThreadLocal>> {
    +{static} getCurrentTenant(): String
    +{static} clear(): void
  }
}

PipelineMoveRoute -down-> WorkflowController : defines routes
WorkflowController -down-> WorkflowService : delegates
WorkflowController ..> MoveApplicationRequest : consumes
WorkflowController ..> PipelineBoardResponse : returns
WorkflowService ..> MoveApplicationRequest : processes
WorkflowService -down-> ApplicationRepository : persists through
WorkflowService --> EmailNotificationProducer : dispatches events
WorkflowService --> TenantContext : enforces tenant scope
ApplicationRepository -down-> Application : manages
Application --> RecruitmentStage : currently in
Application --> ApplicationStatus : typed by
Application "1" *-- "0..*" ApplicationStatusHistory : history
Application --> TenantDB : persists to
RecruitmentStage --> TenantDB : persists to
EmailNotificationProducer --> NotifyBroker : publishes X-Tenant-ID

MoveApplicationRequest -[hidden]right-> PipelineBoardResponse
NotifyBroker -[hidden]right-> TenantDB
TenantDB -[hidden]right-> TenantContext

note right of WorkflowService
  canMove: forward along sort_order.
  HIRED/REJECTED are terminal (WITHDRAWN is out of scope).
  Offer/Hire/Reject belong to create-and-track-offer.
end note

@enduml
